# brac7

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.sh
brac7_site/brackets/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
brac7_site/brackets/migrations/: 0001_initial.py
brac7_site/brackets/templates/brackets/: base.html  create.html  detail.html  home.html
brac7_site/config/: settings.py  urls.py
brac7_site/workspace/: urls.py  views.py
brac7_site/workspace/static/: brac7.css  workspace.js
brac7_site/workspace/templates/workspace/: design.html
examples/: ai-startups.txt
scripts/: generate_ai_bracket.sh  generate_all_formats.sh  generate_round_robin.sh  git_history.sh
src/brac7/: __init__.py  __main__.py  cli.py  engine.py  interactive.py  models.py  seeding.py  validation.py
src/brac7/exporters/: __init__.py  csv_exporter.py  html_exporter.py  json_exporter.py  markdown.py  mermaid.py  pdf_export.py  xlsx.py
tests/: test_byes.py  test_engine.py  test_engine_param.py  test_exporters_detailed.py  test_exports.py  test_interactive.py  test_seeding.py  test_validation.py
