[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brac7"
version = "0.2.0"
description = "Tournament bracket generator — CLI, library, PDF, XLSX, Mermaid, Django UI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "jrb00013" }]
requires-python = ">=3.10"
keywords = ["bracket", "tournament", "single-elimination", "double-elimination"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
ui = [
    "django>=5.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
brac7 = "brac7.cli:main"

[project.urls]
Homepage = "https://github.com/jrb00013/brac7"
Repository = "https://github.com/jrb00013/brac7"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
